--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 
   <groupId>Framework</groupId>
-  <artifactId>FunMiles</artifactId>
+  <artifactId>Generator</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Fun miles tests</name>
 
